[gd_scene load_steps=28 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/sprites/characters/player.png" type="Texture" id=2]
[ext_resource path="res://Assets/sprites/0x72_DungeonTilesetII_v1.3.1/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=3]
[ext_resource path="res://Assets/sprites/objects/pixil-frame-0(1).png" type="Texture" id=4]
[ext_resource path="res://Assets/sprites/objects/pixil-layer-Background(1).png" type="Texture" id=5]
[ext_resource path="res://Assets/sprites/objects/lkgiludgsfilsufhg.png" type="Texture" id=6]
[ext_resource path="res://Assets/sound/568170__merrick079__sword-sound-1.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/sound/521999__kastenfrosch__whoosh-dash.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/sound/404109__deathscyp__damage-1.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
} ]

[sub_resource type="Animation" id=19]
resource_name = "AttackRev"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D2/Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ -270.0, -65.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D2/Position2D/Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ -200.0, 25.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D2/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D2/Area2D/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AttackAudio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "AttackRev"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D2/Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -65.0, -270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D2/Position2D/Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 25.0, -246.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D2/Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D2/Area2D/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AttackAudio")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D2/Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D2/Position2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D2/Position2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position2D2/Position2D/Position2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, -6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Position2D2/Position2D/Position2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Position2D2/Position2D/Position2D:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Position2D2/Sprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Position2D2:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 110.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Position2D2/Area2D/CollisionPolygon2D:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AttackAudio:volume_db")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="CircleShape2D" id=22]
radius = 6.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ -81.0 ]
}
speed = 150

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -17 )
frames = SubResource( 18 )
frame = 3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 19 )
anims/AttackRev = SubResource( 21 )
anims/RESET = SubResource( 20 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 0, -8 )
rotation = 1.91986

[node name="Position2D" type="Position2D" parent="Position2D2"]

[node name="Position2D" type="Position2D" parent="Position2D2/Position2D"]
position = Vector2( -12, -6 )
rotation = 0.436332

[node name="Pixil-layer-Layer1" type="Sprite" parent="Position2D2/Position2D/Position2D"]
position = Vector2( 8.46167, -7.41176 )
rotation = 0.785398
z_index = -1
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 307.999, 86.1429, 9.00107, 25.8571 )

[node name="Sprite" type="Sprite" parent="Position2D2"]
visible = false
position = Vector2( 14, 0 )
rotation = 0.785398
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Position2D2"]
collision_layer = 2
collision_mask = 18

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Position2D2/Area2D"]
polygon = PoolVector2Array( -10.0775, 13.2455, -7.34482, 9.05834, -0.338593, 10.765, 7.09259, 4.86776, 12.0467, 0.936268, 11.874, -5.38593, 6.06311, -9.65602, 2.30434, -8.28794, -6.23926, -8.37088, -10.8548, -15.2044, -1.9726, -25.8865, 12.4648, -30.077, 25.966, -22.2209, 35.5391, -7.61418, 35.6323, 18.9563, 23.589, 29.7247, 10.6889, 32.2916, 2.05896, 29.0476, -6.571, 25.8035 )
disabled = true

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( 0, -2 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 22 )

[node name="AttackAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="DashAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="DamageAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="Node" type="Node" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="Node"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -26.0
margin_right = 1041.0
margin_bottom = -17.0
rect_scale = Vector2( 2, 2 )
min_value = -2.0
max_value = 10.0
value = 1.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
